US5903 DDK Foundation Change footer from fixed (sticky) to sit at the bottom of the page. This prevents the footer from covering the content of the page.

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -2,6 +2,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 251px;
   background-color: $footer-background;
   padding: 2em 0;
 
